fix(CompressionBatch): 大量圖片壓縮導致無法正常壓縮圖片 限制併發數量：改用固定大小的執行緒池
issue: #2
issue: #3